fix dark theme scrollbar (timeline-maker-v2)

--- a/timeline-maker/v2/index.css
+++ b/timeline-maker/v2/index.css
@@ -12,6 +12,7 @@
   --background: #000;
   --foreground: #fff;
   --accent: gray;
+  color-scheme: dark;
 }
 html, select {
 	font-family: Noto Sans;
